# easy-desktop-pet

./: .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: constants.ts  main.ts  router.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: PetCanvas.vue  PetMenu.vue  PomodoroWidget.vue  SettingsShell.vue
src/lib/: config.ts  events.ts  media.ts  pet.ts  todoTimer.ts  windowPosition.ts
src/stores/: app.ts
src/tests/: config.spec.ts  pet.spec.ts  todoTimer.spec.ts  windowPosition.spec.ts
src/views/: PetView.vue  SettingsView.vue
